Housecleaning tasks: update README, rename files, improve documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,13 @@
 [metadata]
-name = linkcheckmd
-version = 1.4.0
-author = Michael Hirsch, Ph.D.
-author_email = scivision@users.noreply.github.com
-url = https://github.com/scivision/linkchecker-markdown
-description = Check links for Markdown-based site
+name = mkdocs-linkcheck
+version = 1.0.0
+author = Byrne Reese
+author_email = byrne@majordojo.com
+url = https://github.com/byrnereese/mkdocs-linkchecker
+description = Check links for Mkdocs-based sites, as well as any markdown-based website
 keywords =
   markdown
+  mkdocs
   jekyll
   hugo
 classifiers =
@@ -49,4 +50,4 @@ requests =
 
 [options.entry_points]
 console_scripts =
-  linkcheckMarkdown = linkcheckmd.__main__:main
+  mkdocs-linkcheck = mkdocs-linkcheck.__main__:main
