--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = mkdocs-linkcheck
+name = mkdocs_linkcheck
 version = 1.0.0
 author = Byrne Reese
 author_email = byrne@majordojo.com
@@ -50,4 +50,4 @@ requests =
 
 [options.entry_points]
 console_scripts =
-  mkdocs-linkcheck = mkdocs-linkcheck.__main__:main
+  mkdocs-linkcheck = mkdocs_linkcheck.__main__:main
