Initial framework in place - checking in

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
-name = mkdocs_linkcheck
-version = 1.0.6
+name = mkdocs_codecheck
+version = 0.9.0
 author = Byrne Reese
 author_email = byrne@majordojo.com
-url = https://github.com/byrnereese/mkdocs-linkchecker
-description = Check links for Mkdocs-based sites, as well as any markdown-based website
+url = https://github.com/byrnereese/mkdocs-codechecker
+description = Traverses a directory tree looking for code samples, then attempts to validate each code sample found.
 keywords =
+  code
+  qa
   markdown
   mkdocs
-  jekyll
-  hugo
 classifiers =
   Development Status :: 5 - Production/Stable
   Environment :: Console
@@ -28,8 +28,8 @@ long_description_content_type = text/markdown
 python_requires = >= 3.7
 include_package_data = True
 packages = find:
-install_requires =
-  aiohttp >= 3.3
+#install_requires =
+#  aiohttp >= 3.3
 package_dir=
     =src
 
@@ -50,4 +50,4 @@ requests =
 
 [options.entry_points]
 console_scripts =
-  mkdocs-linkcheck = mkdocs_linkcheck.__main__:main
+  mkdocs-codecheck = mkdocs_codecheck.__main__:main
